--- a/index.html
+++ b/index.html
@@ -26,15 +26,19 @@
 
       <ul>
         <li>
-          <a href="https://onicolasprado.github.io/Cafeteria/" target="_blank"
-            >Conheça Nosso Site</a
+          <a href="https://wa.me/+5551980241688" target="_blank"
+            >Entre em contato</a
           >
         </li>
         <li>
-          <a href="#">Conheça nossos Produtos</a>
+          <a
+            href="#"
+            onclick="alert('Nosso Site Esta em Construção'); return false;"
+            >Visite Nosso Site</a
+          >
         </li>
         <li>
-          <a href="https://wa.me/+5551980241688">Entre em contato</a>
+          <a href="#" target="_blank">Conheça nossos Produtos</a>
         </li>
       </ul>
       <div id="social-links">
