--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           >
         </li>
         <li>
-          <a href="#" target="_blank">Conheça nossos Produtos</a>
+          <a
+            href="#"
+            onclick="alert('Nosso Site Esta em Construção'); return false;"
+            target="_blank"
+            >Conheça nossos Produtos</a
+          >
         </li>
       </ul>
       <div id="social-links">
